# serial

./: CMakeLists.txt  main.cpp
debug/: launch  main  terminal
src/devices/: device.cpp  device.h  devices.cpp  devices.h
src/devices/tests/: device.test.cpp  devices.test.cpp
src/terminal/: terminal.cpp  terminal.h
src/terminal/tests/: terminal.test.cpp
